# partygpt

./: .gitignore  LICENSE  app.py  app_run.bat  pyproject.toml  readme.md  settings.yml
doc/: solution.drawio
partygpt/: __init__.py  partygpt.py
partygpt/comms/: __init__.py  openai_wrapper.py  various.py
partygpt/entertainment/: games.py
partygpt/humanly/: __init__.py  personas.py
static/css/: styles.css
static/js/: audio.mjs  iso6393-to-bcp47.mjs  script.js  script.mjs
templates/: index.html
