[tool.poetry]
name = "partygpt"
version = "0.1.0"
description = ""
authors = ["Martin Trat", "Sonja Trat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27"
python-dotenv = "*"
Flask = "*"
PyYAML = "*"
Flask-SocketIO = "^5.3.0"
simple-websocket = "*"
pyinstaller = "*"


[tool.poetry.group.dev.dependencies]
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
